--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "npx -y raylib"
   },
   "dependencies": {
-    "raylib": "^0.9.0"
+    "@raylib/api": "^4.0.0",
+    "raylib": "^0.9.1"
   }
 }
