--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npx -y raylib"
   },
   "dependencies": {
-    "@raylib/api": "^4.0.0",
-    "raylib": "^0.9.1"
+    "raylib": "^0.9.1",
+    "simplex-noise": "^3.0.1"
   }
 }
